# Kronos

./: .gitmodules  Architecture.drawio  CMakeLists.txt
ArchitectureDemos/: CMakeLists.txt  Scene.cpp  SchedulingInfrastructure_01.cpp  SchedulingInfrastructure_02.cpp  module.cpp
ArchitectureDemos/SchedulingInfrastructure_01/Engine/Source/Core/: Application.h  Layer.h  Module.h
ArchitectureDemos/SchedulingInfrastructure_01/Engine/Source/Logging/: Logging.h  LoggingModule.h
ArchitectureDemos/SchedulingInfrastructure_01/Engine/Source/Renderer/: RendererModule.h
Kronos/Source/Kronos/: main.cpp
Kronos/Source/Kronos/Core/: Application.h  Assert.h  Layer.h  Log.cpp  Log.h  Window.h
Kronos/Source/Kronos/Core/Windows/: Window.cpp
Kronos/Source/Kronos/Scene/: Scene.h
KronosEditor/Source/: main.cpp
KronosEditor/Source/KronosEditor/: ActionSearchWindow.cpp  ActionSearchWindow.h  AssetBrowserWindow.cpp  AssetBrowserWindow.h  EditorLayer.cpp  EditorLayer.h  EditorWindow.cpp  EditorWindow.h  SceneOutlinerWindow.cpp  SceneOutlinerWindow.h
RnD/: main.cpp
RnD/ExecutionGraph/: main.cpp
RnD/KronosRnD/: KronosRnD.sln
RnD/KronosRnD/DODArchitecture/: Core.h  DODArchitecture.cpp  DODArchitecture.vcxproj  DODArchitecture.vcxproj.filters  main.cpp
RnD/KronosRnD/Delegate/: Delegate.vcxproj
RnD/KronosRnD/EditorCommandSystem/: EditorCommandSystem.vcxproj  main.cpp
RnD/KronosRnD/InputSystem/: InputSystem.vcxproj  main.cpp
RnD/KronosRnD/KronosRnD/: KronosRnD.vcxproj
RnD/KronosRnD/KronosRnD/x64/Debug/: KronosRnD.exe.recipe  KronosRnD.ilk  Scene01.ilk  vc143.idb
RnD/KronosRnD/KronosRnD/x64/Debug/KronosRnD.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  KronosRnD.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RnD/KronosRnD/KronosRnD/x64/Debug/Scene01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RnD/KronosRnD/Scene01/: Scene01.vcxproj  main.cpp
RnD/KronosRnD/Scene01/x64/Debug/: Scene01.exe.recipe  Scene01.ilk  vc143.idb
RnD/KronosRnD/Scene01/x64/Debug/Scene01.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RnD/Test01/: CMakeLists.txt  build.sh  main.cpp
RnD/Test01/Core/: Application.h
RnD/Test01/GameplayFrameworkModule/: GameplayFrameworkModule.h
RnD/Test01/Kronos/Source/Kronos/: main.cpp
RnD/Test01/Kronos/Source/Kronos/Core/: Application.h  Assert.h  Layer.h  Memory.h  Module.h
RnD/Test01/Kronos/Source/Kronos/GameplayFrameworkModule/: GameplayFrameworkModule.h
RnD/Test01/Kronos/Source/Kronos/InputSystemModule/: InputSystemModule.h
RnD/Test01/Kronos/Source/Kronos/IntegrantModule/: IntegrantModule.h
RnD/Test01/Kronos/Source/Kronos/LevelStreamingModule/: LevelStreamingModule.h
RnD/Test01/Kronos/Source/Kronos/LoggingModule/: LoggingModule.h
RnD/Test01/Kronos/Source/Kronos/RendererModule/: ImGuiRenderer.cpp  ImGuiRenderer.h  RendererCore.cpp  RendererCore.h  RendererModule.h  StaticMesh.cpp  StaticMesh.h  VulkanAbstraction.h  VulkanJunk.h  vulkanJunk.cpp
RnD/Test01/Kronos/Source/Kronos/RendererModule/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanCommon.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSwapchain.cpp  VulkanSwapchain.h
RnD/Test01/Kronos/Source/Kronos/WindowModule/: WindowModule.h
RnD/Test01/KronosEditor/Source/KronosEditor/: main.cpp
RnD/Test01/LoggingModule/: LoggingModule.h
RnD/Test01/assets/shaders/: compile.bat  shader.frag  shader.frag.spv
